Fix: remove reflection ugly stuff